# weather-pi

./: Cargo.toml  README.md  weather-pi.service
.cargo/: config.toml
assets/: countdown.toml  greeter.toml
src/: delay.rs  dht.rs  display.rs  main.rs  overlay.rs  sensor.rs
src/apps/: countdown.rs  greeter.rs  heart.rs  heart_arm.rs  mod.rs  scrolling.rs  temperature.rs
src/display/: epd.rs  mod.rs  sim.rs
src/effects/: alpha_display.rs  color_map_display.rs  filter_map_display.rs  flip_display.rs  hash_display.rs  mod.rs  noop_display.rs
