[package]
name = "weather-pi"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/corrodedHash/weather-pi"
description = "Program to interact with a RPi Zero containing a EPD Waveshare E-Ink display"
keywords = ["Raspberry", "EPD Waveshare"]
categories = ["embedded"]

[dependencies]
config = "0.15.11"
eg-seven-segment = "0.2.0"
embedded-dht-rs = { version = "0.4.0", features = ["dht22"] }
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-text = "0.7.2"
epd-waveshare = "0.6.0"
libc = "0.2.169"
rand = "0.9.0"
rppal = { version = "0.22.1", features = ["hal"] }
serde = "1.0.219"
serde_derive = "1.0.219"
tinybmp = "0.6.0"
u8g2-fonts = { version = "0.6.0", features = ["embedded_graphics_textstyle"] }
